docker-docker-compose/demo-student-app/prod/student-app-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stuet-app-db
  labels:
    app: stuet-app-db
spec:
  selector:
    matchLabels:
      app: stuet-app-dbstuet-app-db
  template:
    metadata:
      name: stuet-app-db
      labels:
        app: stuet-app-db
    spec:
      containers:
        - name: stuet-app-db
          image: postgres:16.14
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              protocol: TCP
      restartPolicy: Always
