docker-docker-compose/demo-student-app/prod/student-app-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-app-db-service
spec:
  selector:
    app:  stuet-app-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5490
  type: ClusterIP
