docker-docker-compose/demo-student-app/prod/student-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: student-app-service
spec:
  selector:
    app: student-app
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 80
  type: LoadBalancer
