docker-docker-compose/demo-student-app/prod/student-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stuent-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: student-app-service
                port:
                  number: 80
          - path: /bd
            pathType: Prefix
            backend:
              service:
                name: student-app-db-service
                port:
                  number: 5490
